# semvideo-hackathon-230521

./: .gitignore  README.md  example.py  pyproject.toml  run_pipeline.sh
.streamlit/: config.toml
_dev/: article_generation.ipynb  clip.ipynb  download_videos.ipynb  process_video.ipynb  run_search_over_videos.ipynb
article/: text.md
data/: dataset.parquet
pipeline/: clip_wrapper.py  download_videos.py  get_video_ids.py  get_video_urls.py  process_videos.py  videos.py
tests/pipeline/: test_clip_wrapper.py  test_download_videos.py  test_videos.py
video_semantic_search/: app.py
