[tool.poetry]
name = "video-semantic-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "video_semantic_search"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.22.0"
pandas = "^2.0.1"
pyarrow = "^12.0.0"
faiss-cpu = "^1.7.4"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
