[tool.poetry]
name = "video-semantic-search"
version = "0.1.0"
description = ""
authors = ["Ben Tenmann <benji.tenmann@me.com>", "Sidney Radcliffe <sidneyradcliffe@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "video_semantic_search"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.22.0"
pandas = "^2.0.1"
pyarrow = "^12.0.0"
# need to pin faiss-cpu to 1.6.5 because of segfaults when interacting with streamlit
# https://github.com/facebookresearch/faiss/issues/2099#issuecomment-961172708
# sidney use 1.7.4
faiss-cpu = "==1.7.4"
transformers = "^4.29.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
urllib3 = "1.26.15"
yt-dlp = "^2023.3.4"
tqdm = "^4.65.0"
opencv-python = "^4.7.0.72"
youtube-dl = "^2021.12.17"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
pytest = "^7.3.1"
jupyterlab = "^4.0.0"
nbconvert = "^7.4.0"
jupyter-contrib-nbextensions = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
